# Cmake

./: CMakeLists.txt
src/: main.cpp
